--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,6 @@ plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.45' apply false
+    id 'androidx.navigation.safeargs' version '2.5.3' apply false
 }
